Add new project page

--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -3,6 +3,7 @@
   <h2>{{pageTitle}}</h2>
   <ul>
     <ol> <a href='/'>Home</a> </ol>
+    <ol> <a href='/project'>Project</a> </ol>
     <ol> <a href='/about'>About</a> </ol>
   </ul>
 </header>
